--- a/frontend/assets/styles/components/schedule.scss
+++ b/frontend/assets/styles/components/schedule.scss
@@ -70,6 +70,7 @@
       flex-wrap: wrap;
       font-size: 15px;
       justify-content: space-between;
+      padding: 0 25px 0 0;
     }
 
     .fave-system {
