--- a/frontend/assets/styles/components/favorites.scss
+++ b/frontend/assets/styles/components/favorites.scss
@@ -1,3 +1,13 @@
+.favorites-header {
+  display: flex;
+  justify-content: space-between;
+
+  .btn-container {
+    margin-top: 22px;
+    margin-right: 15px;
+  }
+}
+
 .fave-card {
   font-size: 14px;
   line-height: 14px;
