--- a/frontend/src/styles/colors.scss
+++ b/frontend/src/styles/colors.scss
@@ -1,4 +1,4 @@
-$jet-100: rbga(45, 42, 38, 1);
+$jet-100: rgb(45, 42, 38);
 $jet-50: rbga(45, 42, 38, .5);
 $jet-30: rbga(45, 42, 38, .3);
 $jet-10: rbga(45, 42, 38, .1);
