--- a/frontend/src/styles/_index.scss
+++ b/frontend/src/styles/_index.scss
@@ -1,2 +1,17 @@
 @import "breakpoints.scss";
 @import "colors.scss";
+@import "variables.scss";
+
+@import "components/navigation.scss";
+
+body {
+  color: $text-color;
+  font-family: 'Roboto', 'Helvetica', sans-serif;
+  font-size: 16px;
+  margin: 0;
+}
+
+main {
+  margin: 0 auto;
+  max-width: $desktop;
+}
