--- a/frontend/src/styles/components/_navigation.scss
+++ b/frontend/src/styles/components/_navigation.scss
@@ -6,5 +6,8 @@ header {
     margin: 0 auto;
     max-width: $desktop;
     padding: 1rem 0;
+
+    display: flex;
+    justify-content: space-between;
   }
 }
