--- a/frontend/src/styles/colors.scss
+++ b/frontend/src/styles/colors.scss
@@ -15,3 +15,7 @@ $space-cadet-50: rgba(56, 49, 83, .5);
 $space-cadet-30: rgba(56, 49, 83, .3);
 $space-cadet-10: rgba(56, 49, 83, .1);
 $white: rgba(255, 255, 255, 1);
+
+$primary: $yale-blue-100;
+$secondary: $madder-100;
+$tertiary: $space-cadet-100;
