--- a/frontend/src/styles/_index.scss
+++ b/frontend/src/styles/_index.scss
@@ -2,6 +2,8 @@
 @import "colors.scss";
 @import "variables.scss";
 
+@import "ui/buttons.scss";
+@import "components/filterBox.scss";
 @import "components/navigation.scss";
 
 body {
