--- a/frontend/src/styles/colors.scss
+++ b/frontend/src/styles/colors.scss
@@ -1,9 +1,7 @@
 $jet: rgba(45, 42, 38, 1);
+$jet-50: rgba(45, 42, 38, .5);
 $fire-engine: rgba(206, 14, 45, 1);
 $yale-blue: rgba(0, 56, 168, 1);
 $space-cadet: rgba(29, 41, 81, 1);
 $white: rgba(255, 255, 255, 1);
 $black: rgba(0, 0, 0, 1);
-
-$nav-bg: $jet;
-$body-bg: $white;
